Fix hero section text overlay and alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1360,12 +1360,190 @@ a.mobile-show.search-bar-icon:hover {
 # Hero Styles
 
 ----------------------------------------------------------------------------- */
+.hero-bg {
+  background-image: url(../img/hero-bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
 
-/* ===== MODERN HERO SECTION ===== */
+.hero-text {
+  display: table;
+  height: 100%;
+}
 
+.hero-text-tablecell {
+  display: table-cell;
+}
 
+.hero-area {
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
 
+html, body {
+  height: 100%;
+}
 
+.hero-area:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  content: "";
+  background-color: #07212e;
+  z-index: -1;
+  opacity: 0.6;
+}
+
+.hero-text p.subtitle {
+  color: #F28123;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  font-size: 17px;
+}
+
+.hero-text h1 {
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 1.3;
+  color: #fff;
+}
+
+.hero-area div {
+  height: 100%;
+}
+
+.hero-area div.hero-text {
+  height: 100%;
+  width: 100%;
+}
+
+.hero-area div.hero-text-tablecell {
+  height: auto;
+  vertical-align: middle;
+}
+
+.hero-area div.hero-text-tablecell div {
+  height: auto;
+  vertical-align: middle;
+}
+
+.hero-btns {
+  margin-top: 35px;
+}
+
+.hero-btns a.bordered-btn {
+  margin-left: 15px;
+}
+
+.hero-area div.hero-form {
+  background-color: #fff;
+  text-align: center;
+  width: 380px;
+  margin: 0 auto;
+  margin-right: 0;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 15px #2d2d2d;
+  box-shadow: 0 0 15px #2d2d2d;
+  position: absolute;
+  right: 30px;
+  bottom: -15%;
+  height: 600px;
+}
+
+input[type="submit"] {
+  background-color: #F28123;
+  color: #051922;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 15px;
+  border: none !important;
+  cursor: pointer;
+  padding: 15px 25px;
+  border-radius: 3px;
+}
+
+.homepage-bg-1 {
+  background-image: url(../img/hero-bg.jpg);
+}
+
+.homepage-bg-2 {
+  background-image: url(../img/hero-bg-2.jpg);
+}
+
+.homepage-bg-3 {
+  background-image: url(../img/hero-bg-3.jpg);
+}
+
+.homepage-slider {
+  height: 100%;
+}
+
+.homepage-slider div {
+  height: 100%;
+}
+
+.homepage-slider div.hero-text {
+  display: table;
+  width: 100%;
+}
+
+.homepage-slider div.hero-text-tablecell {
+  height: auto;
+  vertical-align: middle;
+  display: table-cell;
+}
+
+.homepage-slider div.hero-text-tablecell div {
+  height: auto;
+}
+
+.single-homepage-slider {
+  background-size: cover;
+  background-position: center;
+  background-color: #020C0E;
+  position: relative;
+  z-index: 1;
+}
+
+.single-homepage-slider:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #051922;
+  content: "";
+  z-index: -1;
+  opacity: 0.7;
+}
+
+div.owl-controls, .owl-controls div {
+  height: auto;
+  top: 50%;
+  color: #F28123;
+  font-size: 48px;
+}
+
+.homepage-slider {
+  position: relative;
+}
+
+.owl-prev {
+  position: absolute;
+  left: 60px;
+  margin-top: -30px;
+}
+
+.owl-next {
+  position: absolute;
+  right: 60px;
+  margin-top: -30px;
+}
 
 /* -----------------------------------------------------------------------------
 
@@ -2581,204 +2759,22 @@ table.order-details tbody td {
 
 
 
-
-
-
-
-
-/* ===== HERO FIX ===== */
-
-.hero-bg {
-  background-image: url(../img/hero-bg.jpg);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+.hero-text-wrapper {
+    position: relative;
+    z-index: 2;
 }
 
-.hero-text {
-  display: table;
-  height: 100%;
+.hero-area::after {
+    z-index: 1;
 }
 
-.hero-text-tablecell {
-  display: table-cell;
+.hero-title {
+    font-size: 56px;
+    font-weight: 700;
+    color: #ffffff;
 }
 
-.hero-area {
-  height: 100%;
-  position: relative;
-  z-index: 1;
-}
-
-html, body {
-  height: 100%;
-}
-
-.hero-area:after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  content: "";
-  background-color: #07212e;
-  z-index: -1;
-  opacity: 0.6;
-}
-
-.hero-text p.subtitle {
-  color: #F28123;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 7px;
-  font-size: 17px;
-}
-
-.hero-text h1 {
-  font-size: 64px;
-  font-weight: 700;
-  line-height: 1.3;
-  color: #fff;
-}
-
-.hero-area div {
-  height: 100%;
-}
-
-.hero-area div.hero-text {
-  height: 100%;
-  width: 100%;
-}
-
-.hero-area div.hero-text-tablecell {
-  height: auto;
-  vertical-align: middle;
-}
-
-.hero-area div.hero-text-tablecell div {
-  height: auto;
-  vertical-align: middle;
-}
-
-.hero-btns {
-  margin-top: 35px;
-}
-
-.hero-btns a.bordered-btn {
-  margin-left: 15px;
-}
-
-.hero-area div.hero-form {
-  background-color: #fff;
-  text-align: center;
-  width: 380px;
-  margin: 0 auto;
-  margin-right: 0;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 0 15px #2d2d2d;
-  box-shadow: 0 0 15px #2d2d2d;
-  position: absolute;
-  right: 30px;
-  bottom: -15%;
-  height: 600px;
-}
-
-input[type="submit"] {
-  background-color: #F28123;
-  color: #051922;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 15px;
-  border: none !important;
-  cursor: pointer;
-  padding: 15px 25px;
-  border-radius: 3px;
-}
-
-.homepage-bg-1 {
-  background-image: url(../img/hero-bg.jpg);
-}
-
-.homepage-bg-2 {
-  background-image: url(../img/hero-bg-2.jpg);
-}
-
-.homepage-bg-3 {
-  background-image: url(../img/hero-bg-3.jpg);
-}
-
-.homepage-slider {
-  height: 100%;
-}
-
-.homepage-slider div {
-  height: 100%;
-}
-
-.homepage-slider div.hero-text {
-  display: table;
-  width: 100%;
-}
-
-.homepage-slider div.hero-text-tablecell {
-  height: auto;
-  vertical-align: middle;
-  display: table-cell;
-}
-
-.homepage-slider div.hero-text-tablecell div {
-  height: auto;
-}
-
-.single-homepage-slider {
-  background-size: cover;
-  background-position: center;
-  background-color: #020C0E;
-  position: relative;
-  z-index: 1;
-}
-
-.single-homepage-slider:after {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #051922;
-  content: "";
-  z-index: -1;
-  opacity: 0.7;
-}
-
-div.owl-controls, .owl-controls div {
-  height: auto;
-  top: 50%;
-  color: #F28123;
-  font-size: 48px;
-}
-
-.homepage-slider {
-  position: relative;
-}
-
-.owl-prev {
-  position: absolute;
-  left: 60px;
-  margin-top: -30px;
-}
-
-.owl-next {
-  position: absolute;
-  right: 60px;
-  margin-top: -30px;
-}
-
-/* Mobile */
-@media (max-width: 768px) {
-    .hero-title {
-        font-size: 32px;
-    }
-    .hero-subtitle {
-        font-size: 16px;
-    }
+.hero-subtitle {
+    font-size: 20px;
+    color: #f1f1f1;
 }
